# python-automate-101

./: Session_0_Basics.ipynb  Session_1_Python_Automation_Basics.ipynb  Session_1_Python_handle_files_basics.ipynb  Session_2_Data_Document_Processing.ipynb  Session_3_Image_Browser_Automation.ipynb  Session_3_Image_Report_Automation.ipynb  Session_4_Deployment_RPA_Tools.ipynb  filled.docx  main.py  pyproject.toml  sample.xlsx  template.docx
